--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "ng": "npm exec ng",
     "start": "npm exec ng serve",
     "build": "npm exec ng build",
-    "dev": "npm exec ng serve"
+    "dev": "npm exec ng serve",
+    "test": "ng test",
+    "dev:ssr": "ng run demo:serve-ssr",
+    "serve:ssr": "node dist/demo/server/main.js",
+    "build:ssr": "ng build && ng run demo:server",
+    "prerender": "ng run demo:prerender"
   },
   "dependencies": {
     "@angular/animations": "^18.1.0",
@@ -14,9 +19,12 @@
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
+    "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@nguniversal/express-engine": "^18.0.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
+    "express": "^4.18.2",
     "particles.js": "^2.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
@@ -26,7 +34,15 @@
     "@angular-devkit/build-angular": "^18.1.0",
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
+    "@types/express": "^4.17.21",
+    "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.0",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.0"
   }
 }
