--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
+    "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@nguniversal/express-engine": "^18.0.0",
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "^18.1.0",
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
+    "@nguniversal/builders": "^18.0.0",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.0",
