--- a/angular.json
+++ b/angular.json
@@ -78,22 +78,8 @@
           },
           "defaultConfiguration": "production"
         },
-        "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
-          "configurations": {
-            "development": {
-              "browserTarget": "demo:build:development",
-              "serverTarget": "demo:server:development"
-            },
-            "production": {
-              "browserTarget": "demo:build:production",
-              "serverTarget": "demo:server:production"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
         "prerender": {
-          "builder": "@nguniversal/builders:prerender",
+          "builder": "@angular-devkit/build-angular:prerender",
           "options": {
             "routes": [
               "/",
