--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/platform-server": "^18.2.7",
     "@angular/router": "^18.2.7",
+    "@angular/ssr": "^18.2.7",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
