--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-dashboard",
+  "name": "demo",
   "private": true,
   "scripts": {
     "ng": "npm exec ng",
@@ -12,16 +12,16 @@
     "prerender": "ng run demo:prerender"
   },
   "dependencies": {
-    "@angular/animations": "^18.2.7",
-    "@angular/common": "^18.2.7",
-    "@angular/compiler": "^18.2.7",
-    "@angular/core": "^18.2.7",
-    "@angular/forms": "^18.2.7",
-    "@angular/platform-browser": "^18.2.7",
-    "@angular/platform-browser-dynamic": "^18.2.7",
-    "@angular/platform-server": "^18.2.7",
-    "@angular/router": "^18.2.7",
-    "@angular/ssr": "^18.2.7",
+    "@angular/animations": "18.2.13",
+    "@angular/common": "18.2.13",
+    "@angular/compiler": "18.2.13",
+    "@angular/core": "18.2.13",
+    "@angular/forms": "18.2.13",
+    "@angular/platform-browser": "18.2.13",
+    "@angular/platform-browser-dynamic": "18.2.13",
+    "@angular/platform-server": "18.2.13",
+    "@angular/router": "18.2.13",
+    "@angular/ssr": "18.2.13",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
@@ -31,9 +31,9 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.0",
-    "@angular/cli": "^18.1.0",
-    "@angular/compiler-cli": "^18.2.7",
+    "@angular-devkit/build-angular": "18.2.13",
+    "@angular/cli": "18.2.13",
+    "@angular/compiler-cli": "18.2.13",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.0",
