--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
             ],
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "server": "src/server.ts",
-            "outputPath": "dist/demo/browser",
+            "outputPath": "dist/demo",
             "polyfills": [
               "zone.js"
             ],
@@ -44,10 +43,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "tsConfig": "tsconfig.app.json",
-            "ssr": {
-              "entry": "src/main.server.ts"
-            }
+            "tsConfig": "tsconfig.app.json"
           }
         },
         "serve": {
@@ -82,8 +78,22 @@
           },
           "defaultConfiguration": "production"
         },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "demo:build:development",
+              "serverTarget": "demo:server:development"
+            },
+            "production": {
+              "browserTarget": "demo:build:production",
+              "serverTarget": "demo:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
         "prerender": {
-          "builder": "@angular-devkit/build-angular:prerender",
+          "builder": "@nguniversal/builders:prerender",
           "options": {
             "routes": [
               "/",
